MONDRIAN: Fix numerous issues found by 'findbugs'. 	Fix dialect: MySQL allows subquery in FROM clause from 4.0 onwards.
[git-p4: depot-paths = "//open/mondrian/": change = 9303]